fix navbar to work on mobile view

--- a/src/css/Chapters.css
+++ b/src/css/Chapters.css
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
+  margin-top: 120px;
 }
 
 .chapters-container h1 {
